openturns/1.20/_sources/auto_meta_modeling/index.rst.txt
:orphan:

.. _Meta modeling:

Meta modeling
=============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


General purpose metamodels
--------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear least squares model">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_create_linear_least_squares_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_create_linear_least_squares_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear least squares model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a general linear model metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_general_linear_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_general_linear_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a general linear model metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Taylor approximations">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_taylor_approximation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_taylor_approximation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Taylor approximations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear model">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_linear_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_linear_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mixture of experts">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_expert_mixture_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_expert_mixture.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mixture of experts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We consider te so-called Linthurst data set, which contains measures of aerial biomass (BIO) as...">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_stepwise_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_stepwise.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Perfom stepwise regression</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Over-fitting and model selection">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_overfitting_model_selection_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_overfitting_model_selection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Over-fitting and model selection</div>
    </div>


.. raw:: html

    </div>


Polynomial chaos metamodel
--------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Apply a transform or inverse transform on your polynomial chaos">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_distribution_transformation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_distribution_transformation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Apply a transform or inverse transform on your polynomial chaos</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a distribution from an input sample">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_build_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_build_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a distribution from an input sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Polynomial chaos exploitation">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_functional_chaos_exploitation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_exploitation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polynomial chaos exploitation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Polynomial chaos over database">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_functional_chaos_database_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_database.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polynomial chaos over database</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute grouped indices for the Ishigami function">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_ishigami_grouped_indices_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_ishigami_grouped_indices.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute grouped indices for the Ishigami function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Validate a polynomial chaos">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_draw_validation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_draw_validation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Validate a polynomial chaos</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Polynomial chaos graphs">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_functional_chaos_graphs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_graphs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polynomial chaos graphs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a polynomial chaos metamodel by integration on the cantilever beam">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_cantilever_beam_integration_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_cantilever_beam_integration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a polynomial chaos metamodel by integration on the cantilever beam</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Advanced polynomial chaos construction">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_functional_chaos_advanced_ctors_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos_advanced_ctors.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Advanced polynomial chaos construction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a polynomial chaos metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_functional_chaos_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_functional_chaos.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a polynomial chaos metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a polynomial chaos for the Ishigami function: a quick start guide to polynomial chaos">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_ishigami_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a polynomial chaos for the Ishigami function: a quick start guide to polynomial chaos</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot enumeration rules">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_enumeratefunction_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_enumeratefunction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot enumeration rules</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Chaos cross-validation">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_cv_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_cv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Chaos cross-validation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Polynomial chaos is sensitive to the degree">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_beam_sensitivity_degree_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_beam_sensitivity_degree.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Polynomial chaos is sensitive to the degree</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a sparse chaos by integration">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_cleaning_strategy_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_cleaning_strategy.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a sparse chaos by integration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute Sobol&#x27; indices confidence intervals">

.. only:: html

  .. image:: /auto_meta_modeling/polynomial_chaos_metamodel/images/thumb/sphx_glr_plot_chaos_sobol_confidence_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_sobol_confidence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute Sobol' indices confidence intervals</div>
    </div>


.. raw:: html

    </div>


Kriging metamodel
-----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : propagate uncertainties">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_propagate_kriging_ishigami_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_propagate_kriging_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : propagate uncertainties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : multiple input dimensions">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : multiple input dimensions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : draw the likelihood">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_likelihood_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_likelihood.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : draw the likelihood</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : cantilever beam model">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_cantilever_beam_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_cantilever_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : cantilever beam model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Configuring an arbitrary trend in Kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_beam_arbitrary_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_beam_arbitrary_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Configuring an arbitrary trend in Kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example of multi output Kriging on the fire satellite model">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_multioutput_firesatellite_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_multioutput_firesatellite.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example of multi output Kriging on the fire satellite model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging the cantilever beam model using HMAT">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_cantilever_beam_hmat_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_cantilever_beam_hmat.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging the cantilever beam model using HMAT</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : generate trajectories from a metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_simulate_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_simulate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : generate trajectories from a metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Choose the trend basis of a kriging metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_beam_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_beam_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Choose the trend basis of a kriging metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In typical machine learning applications, Gaussian process regression/Kriging surrogate models ...">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_isotropic_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_isotropic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging with an isotropic covariance function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging: metamodel of the Branin-Hoo function">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_branin_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_branin_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging: metamodel of the Branin-Hoo function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : quick-start">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_1d_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_1d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : quick-start</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sequentially adding new points to a kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_sequential_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_sequential.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sequentially adding new points to a kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Advanced kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_advanced_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_advanced.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Advanced kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging :configure the optimization solver">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_hyperparameters_optimization_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_hyperparameters_optimization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging :configure the optimization solver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : choose a trend vector space">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_chose_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_chose_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : choose a trend vector space</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : draw covariance models">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_draw_covariance_models_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_draw_covariance_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : draw covariance models</div>
    </div>


.. raw:: html

    </div>


Fields metamodels
-----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Validation of a Karhunen-Loeve decomposition">

.. only:: html

  .. image:: /auto_meta_modeling/fields_metamodels/images/thumb/sphx_glr_plot_karhunenloeve_validation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_fields_metamodels_plot_karhunenloeve_validation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Validation of a Karhunen-Loeve decomposition</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Viscous free fall: metamodel of a field function">

.. only:: html

  .. image:: /auto_meta_modeling/fields_metamodels/images/thumb/sphx_glr_plot_viscous_fall_metamodel_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_fields_metamodels_plot_viscous_fall_metamodel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Viscous free fall: metamodel of a field function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Metamodel of a field function">

.. only:: html

  .. image:: /auto_meta_modeling/fields_metamodels/images/thumb/sphx_glr_plot_fieldfunction_metamodel_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_fields_metamodels_plot_fieldfunction_metamodel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Metamodel of a field function</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /auto_meta_modeling/general_purpose_metamodels/index.rst
   /auto_meta_modeling/polynomial_chaos_metamodel/index.rst
   /auto_meta_modeling/kriging_metamodel/index.rst
   /auto_meta_modeling/fields_metamodels/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_meta_modeling_python.zip </auto_meta_modeling/auto_meta_modeling_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_meta_modeling_jupyter.zip </auto_meta_modeling/auto_meta_modeling_jupyter.zip>`
